--- a/index.html
+++ b/index.html
@@ -1454,8 +1454,8 @@
 						<span class="flex-align-items-center">
 							<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/location.svg" height="20" width="20" /></span>
 							<input id="eventPromotionLocation" type="text" class="cleanCursorInput" size="50" placeholder="location ('Online', '123 Main St, etc)" style="margin-left: 0 !important; padding-left: 0 !important;" onkeyup="eventPromotionLocationUpdate();" />
-							<img id="eventPromotionLocationGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
 							<img id="eventPromotionLocationClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="clearEventPromotionLocation();" />
+							<img id="eventPromotionLocationGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
 						</span>
 						<span class="flex-justify-content-end">
 						</span>
@@ -1579,6 +1579,27 @@
 							</span>
 						</span>
 
+					<!-- Logo -->
+					<span class="newContentVar">
+						<span class="flex-align-items-center">
+							<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/image.svg" height="20" width="20" /></span>
+							<input id="squareLogoGlobal" type="file" class="cleanCursorInput" size="40" style="height: 40px; padding-right: 73px !important; padding-top: 10px; margin-left: 0 !important; padding-left: 0 !important;" value="Select Logo" onchange="squareLogoGlobalUpdate()" />
+							<img id="squareLogoGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
+							<img id="squareLogoGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="clearSquareLogoGlobal();"/>
+						</span>
+						<span class="flex-justify-content-end">
+							<span>
+								<input id="squareLogoGlobalTopLeft" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalTopLeft();">
+								<input id="squareLogoGlobalBottomLeft" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalBottomLeft();">
+							</span>
+							<span>
+								<input id="squareLogoGlobalTopRight" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalTopRight();">
+								<input id="squareLogoGlobalBottomRight" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalBottomRight();" checked>
+							</span>
+							<input type="range" id="squareLogoGlobalSize" class="cleanCursorInput" name="squareLogoGlobalSize" min="0" max="100" step=".1" style="width: 50px;" oninput="squareLogoGlobalSizeUpdate();">
+						</span>
+					</span>
+
 					<!-- Primary Color -->
 					<span class="newContentVar">
 						<span class="flex-align-items-center">
@@ -1608,27 +1629,6 @@
 								<img id="fontColorGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="clearFontColorGlobal();"/>
 							</span>
 							<span class="flex-justify-content-end">
-							</span>
-						</span>
-
-					<!-- Logo -->
-					<span class="newContentVar">
-						<span class="flex-align-items-center">
-								<span class="cleanCursorInputIcon"><img alt="" src="media/otherIcons/fieldTypes/image.svg" height="20" width="20" /></span>
-								<input id="squareLogoGlobal" type="file" class="cleanCursorInput" size="40" style="height: 40px; padding-right: 73px !important; padding-top: 10px; margin-left: 0 !important; padding-left: 0 !important;" value="Select Logo" onchange="squareLogoGlobalUpdate()" />
-								<img id="squareLogoGlobalGet" alt="" src="media/otherIcons/link.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="showBrandPopup();"/>
-								<img id="squareLogoGlobalClear" alt="" src="media/otherIcons/clear.svg" style="height: 25px; width: 25px; margin: 0 10px 0 0;" onclick="clearSquareLogoGlobal();"/>
-							</span>
-							<span class="flex-justify-content-end">
-								<span>
-									<input id="squareLogoGlobalTopLeft" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalTopLeft();">
-									<input id="squareLogoGlobalBottomLeft" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalBottomLeft();">
-								</span>
-								<span>
-									<input id="squareLogoGlobalTopRight" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalTopRight();">
-									<input id="squareLogoGlobalBottomRight" type="checkbox" height="50px" width="50px;" onchange="squareLogoGlobalBottomRight();" checked>
-								</span>
-								<input type="range" id="squareLogoGlobalSize" class="cleanCursorInput" name="squareLogoGlobalSize" min="0" max="100" step=".1" style="width: 50px;" oninput="squareLogoGlobalSizeUpdate();">
 							</span>
 						</span>
 
@@ -3373,7 +3373,6 @@
 	function hookGlobalFontPriority2() {
 
 		// set variables
-		let text = document.getElementById('hookGlobal').value;
 		let fontSize = 18;
 		let fontWeight = 500;
 
@@ -3416,7 +3415,6 @@
 	function hookResolutionGlobalFontPriority2() {
 
 		// set variables
-		let text = document.getElementById('hookResolutionGlobal').value;
 		let fontSize = 18;
 		let fontWeight = 500;
 
@@ -3474,7 +3472,6 @@
 	function companyUpdateHeadlineFontPriority3() {
 
 		// set variables
-		let text = document.getElementById('companyUpdateHeadline').value;
 		let fontSize = 12;
 		let fontWeight = 300;
 
@@ -3504,7 +3501,6 @@
 	function companyUpdateDateFontPriority2() {
 
 		// set variables
-		let text = document.getElementById('companyUpdateDate').value;
 		let fontSize = 18;
 		let fontWeight = 500;
 
@@ -3603,6 +3599,7 @@
 		clearPrimaryColorGlobal();
 		clearFontColorGlobal();
 		clearSquareLogoGlobal();
+
 	}
 	function clearHookGlobal(){
 		document.getElementById("hookGlobal").value = "";
@@ -4203,14 +4200,14 @@
 	function downloadHorizontalImageFinal() {
 
 		// Set input & output
-		let screenshotTakeable = document.getElementById('finalImageHorizontal');
+		previewFinalImageHorizontal();
+		let finalImageHorizontal = document.getElementById('finalImageHorizontal');
 		let screenshotPlaceable = document.getElementById('output');
 
 		// Call the CDN function
-		html2canvas(screenshotTakeable).then ( function (canvas) {
+		html2canvas(finalImageHorizontal).then ( function (canvas) {
 			screenshotPlaceable.appendChild(canvas);
 			canvas.classList.add('screenshotHorizontal');
-			Array.from(document.querySelectorAll('.screenshotHorizontal')).pop();
 		});
 
 		// Hide to output, so it doesn't show on the page --> needs to be after the CDN call so it can be appended and captured first
@@ -4230,11 +4227,12 @@
 	}
 	function downloadVerticalImageFinal() {
 		// Set input & output
-		let screenshotTakeable = document.getElementById('finalImageVertical');
+		previewFinalImageVertical();
+		let finalImageVertical = document.getElementById('finalImageVertical');
 		let screenshotPlaceable = document.getElementById('output');
 
 		// Call the CDN function
-		html2canvas(screenshotTakeable).then ( function (canvas) {
+		html2canvas(finalImageVertical).then ( function (canvas) {
 			screenshotPlaceable.appendChild(canvas);
 			canvas.classList.add('screenshotVertical');
 		});
@@ -4256,13 +4254,13 @@
 	}
 	function downloadSquareImageFinal() {
 
-
 		// Set input & output
-		let screenshotTakeable = document.getElementById('finalImageSquare');
+		previewFinalImageSquare();
+		let finalImageSquare = document.getElementById('finalImageSquare');
 		let screenshotPlaceable = document.getElementById('output');
 
 		// Call the CDN function
-		html2canvas(screenshotTakeable).then ( function (canvas) {
+		html2canvas(finalImageSquare).then ( function (canvas) {
 			screenshotPlaceable.appendChild(canvas);
 			canvas.classList.add('screenshotSquare');
 		});
@@ -4285,11 +4283,12 @@
 	}
 	function downloadStoryImageFinal() {
 		// Set input & output
-		let screenshotTakeable = document.getElementById('finalImageStory');
+		previewFinalImageStory();
+		let finalImageStory = document.getElementById('finalImageStory');
 		let screenshotPlaceable = document.getElementById('output');
 
 		// Call the CDN function
-		html2canvas(screenshotTakeable).then ( function (canvas) {
+		html2canvas(finalImageStory).then ( function (canvas) {
 			screenshotPlaceable.appendChild(canvas);
 			canvas.classList.add('screenshotStory');
 		});
