--- a/index.html
+++ b/index.html
@@ -121,6 +121,22 @@
 		<div class="navTab" onclick="selectContentType('content'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b';">Content</div>
 		<div class="navTab" onclick="selectContentType('newContent'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b';">New Content</div>
 		<div class="navTab" onclick="selectContentType('settings'); document.querySelectorAll('.navTab').style.backgroundColor = '#c2c2c2'; this.style.backgroundColor = '#4c236b';">Settings</div>
+		<div class="navTab auth-tab-container">
+			<div id="nav-login" class="auth-tab hidden" onclick="toggleModal('modal-login')">Login</div>
+			<div id="nav-signup" class="auth-tab hidden" onclick="toggleModal('modal-signup')">Signup</div>
+			<div id="nav-logout" class="auth-tab hidden menu-container">
+				<svg xmlns="http://www.w3.org/2000/svg" height="48" width="48">
+					<path
+						d="M10.8 35.05Q14 33 17.175 31.975 20.35 30.95 24 30.95q3.65 0 6.825 1.025Q34 33 37.3 35.05q2.15-2.8 3-5.45.85-2.65.85-5.6 0-7.3-4.925-12.225T24 6.85q-7.3 0-12.225 4.925T6.85 24q0 2.95.875 5.6.875 2.65 3.075 5.45ZM24 26.1q-3.15 0-5.3-2.15t-2.15-5.3q0-3.15 2.15-5.3T24 11.2q3.15 0 5.3 2.15t2.15 5.3q0 3.15-2.15 5.3T24 26.1Zm-.05 18.7q-4.25 0-8.05-1.65-3.8-1.65-6.625-4.5t-4.45-6.625Q3.2 28.25 3.2 23.95q0-4.25 1.65-8.025 1.65-3.775 4.5-6.6Q12.2 6.5 15.975 4.85 19.75 3.2 24.05 3.2q4.25 0 8.025 1.65 3.775 1.65 6.6 4.475 2.825 2.825 4.475 6.6Q44.8 19.7 44.8 24q0 4.25-1.65 8.025-1.65 3.775-4.475 6.625-2.825 2.85-6.6 4.5Q28.3 44.8 23.95 44.8Z" />
+				</svg>
+				<img  class="hidden"/>
+				<div class="menu">
+					<div class="menu-name"></div>
+					<div class="menu-email"></div>
+					<div class="logout-btn" onclick="logout()">Logout</div>
+				</div>
+			</div>
+			</div>
 	</nav>
 </header>
 
@@ -2222,6 +2238,64 @@
 		</list>
 	</select>
 
+</div>
+
+<!-- Signup form in a modal -->
+<div id="modal-signup" class="modal" style="display: none;">
+  <form>
+    <h1>Signup</h1>
+
+    <label for="name">Name*</label>
+    <input type="text" placeholder="Enter your name" name="name" required>
+
+    <label for="email">Email*</label>
+    <input type="text" placeholder="Enter your Email" name="email" required>
+
+    <label for="password">Password*</label>
+    <input type="password" placeholder="Enter Password" name="password" required>
+
+    <button type="button" onclick="signup()">Signup</button>
+		<button type="button" class="btn-outline" onclick="loginWithGoogle('modal-signup')">
+			<img class="google-logo" src="https://www.maxpixel.net/static/photo/1x/Search-Engine-Icon-Google-Logo-Google-Search-Logo-1991840.png" />
+			Sign up with Google
+		</button>
+    <button type="button" class="btn-outline" onclick="toggleModal('modal-signup')" >Close</button>
+  </form>
+</div>
+
+<!-- Login form in a modal -->
+<div id="modal-login" class="modal" style="display: none;">
+  <form>
+    <h1>Login</h1>
+
+    <label for="email">Email*</label>
+    <input type="text" placeholder="Enter your Email" name="email" required>
+
+    <label for="password">Password*</label>
+    <input type="password" placeholder="Enter Password" name="password" required>
+
+		<a onclick="toggleModal('modal-login');toggleModal('modal-reset')">Forgot Password?</a>
+
+    <button type="button" onclick="login()">Login</button>
+    <button type="button" class="btn-outline" onclick="loginWithGoogle('modal-login')">
+			<img class="google-logo" src="https://www.maxpixel.net/static/photo/1x/Search-Engine-Icon-Google-Logo-Google-Search-Logo-1991840.png" />
+			Sign in with Google
+		</button>
+    <button type="button" class="btn-outline" onclick="toggleModal('modal-login')" >Close</button>
+  </form>
+</div>
+
+<!-- Reset password form in a modal -->
+<div id="modal-reset" class="modal" style="display: none;">
+  <form>
+    <h1>Reset Password</h1>
+
+    <label for="email">Email*</label>
+    <input type="text" placeholder="Enter your Email" name="email" required>
+
+    <button type="button" onclick="resetPassword()">Send Verification Link</button>
+    <button type="button" class="btn-outline" onclick="toggleModal('modal-reset')" >Close</button>
+  </form>
 </div>
 
 <div id="snackbar"></div>
@@ -4504,6 +4578,223 @@
 		// Hide it after 5 seconds...
 		setTimeout(function(){ snackbar.className = snackbar.className.replace("show", ""); }, timeout);
 	}
+
+	// Open a modal by Id or close the opened modal
+	function toggleModal(modalID = 'modal-signup', resetForm = true){
+		const modal = document.getElementById(modalID)
+		// If the modal is closed, then open it
+		if(modal.style.display === "none"){
+			modal.style.display = "flex"
+		}else{
+			// If the modal is opened, then close it
+			modal.style.display = "none"
+			// Reset the form
+			if(resetForm){
+				resetModalForm(modalID)
+			}
+		}
+	}
+
+	// Function to reset a form within modal
+	function resetModalForm(modalID = 'modal-signup'){
+		const modal = document.getElementById(modalID)
+		// Select all inputs and reset its value
+		const inputs = modal.querySelectorAll('input')
+		inputs.forEach(input => input.value = "")
+	}
+
+</script>
+
+<script type="module">
+
+import { initializeApp } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-app.js";
+import { 
+	getAuth, 
+	createUserWithEmailAndPassword, 
+	updateProfile, 
+	signInWithEmailAndPassword, 
+	signOut,
+	onAuthStateChanged,
+	sendPasswordResetEmail,
+	GoogleAuthProvider,
+	signInWithPopup
+} from "https://www.gstatic.com/firebasejs/9.14.0/firebase-auth.js";
+
+// Firebase Config
+const firebaseConfig = {
+	apiKey: "AIzaSyAPuMZxmsEfVmwrFhVNrpbVkbudksJQWxM",
+	authDomain: "labate-firestore.firebaseapp.com",
+	databaseURL: "https://labate-firestore-default-rtdb.firebaseio.com",
+	projectId: "labate-firestore",
+	storageBucket: "labate-firestore.appspot.com",
+	messagingSenderId: "544978849115",
+	appId: "1:544978849115:web:c3d13f876cbc58ec1cde7e",
+	measurementId: "G-SC3X25RVX1"
+};
+
+// Initialize Firebase
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+window.auth = auth
+const provider = new GoogleAuthProvider()
+
+window.signup = async () => {
+	const name = document.querySelector('#modal-signup input[name=name]').value.trim()
+	const email = document.querySelector('#modal-signup input[name=email]').value.trim()
+	const password = document.querySelector('#modal-signup input[name=password]').value
+	const signupButton = document.querySelector('#modal-signup button');
+
+	if(!name || !email){
+		showSnackbar({message: 'Please enter the required fields'})
+		return;
+	}else if(password.length < 8){
+		showSnackbar({message: 'Password must be at least 8 characters'})
+		return;
+	}
+
+	signupButton.disabled = true;
+	createUserWithEmailAndPassword(auth, email, password)
+	.then((userCredential) => {
+    // Signed in 
+    const user = userCredential.user;
+    return updateProfile(user,{
+			displayName: name
+		})
+  })
+	.then(() => {
+		showSnackbar({message: 'Signup successful'})
+		document.querySelector('.menu-name').innerHTML = name
+		toggleModal('modal-signup')
+	})
+	.catch(err => {
+		console.log(err);
+		let errorMessage;
+		switch(err.code){
+			case 'auth/email-already-in-use':
+				errorMessage = "This email is already in use!"
+				break;
+			default:
+				errorMessage = 'Failed to signup. Please try again!'
+		}
+		
+		showSnackbar({ message: errorMessage })
+		signupButton.disabled = false
+	})
+}
+
+window.login = async () => {
+	const email = document.querySelector('#modal-login input[name=email]').value.trim()
+	const password = document.querySelector('#modal-login input[name=password]').value
+	const loginButton = document.querySelector('#modal-login button');
+
+	if(!email || !password){
+		showSnackbar({message: 'Please enter the required fields'})
+		return;
+	}
+
+	loginButton.disabled = true;
+	signInWithEmailAndPassword(auth, email, password)
+	.then(() => {
+		showSnackbar({message: 'Login successful'})
+		toggleModal('modal-login')
+	})
+	.catch(err => {
+		console.log(err.code)
+		let errorMessage;
+		switch(err.code){
+			case 'auth/user-not-found':
+				errorMessage = "There is no account associated with this email!"
+				break;
+			case 'auth/wrong-password':
+				errorMessage = "The entered password is incorrect!"
+				break;
+			default:
+				errorMessage = 'Failed to login. Please try again!'
+		}
+		
+		showSnackbar({ message: errorMessage })
+		loginButton.disabled = false
+	})
+}
+
+window.loginWithGoogle = function(closeModal= 'modal-login'){
+	signInWithPopup(auth, provider).then(() => {
+		showSnackbar({message: `${closeModal === 'modal-login'? 'Login': 'Signup'} successful`})
+		toggleModal(closeModal)
+	})
+}
+
+window.logout = function(){
+	signOut(auth)
+	.then(() => {
+		showSnackbar({message: 'Logout successful'})
+	})
+	.catch(err => {
+		console.log(err)
+		showSnackbar({message: 'Failed to logout. Please try again'})
+	})
+}
+
+window.resetPassword = function(){
+	const email = document.querySelector('#modal-reset input[name=email]').value.trim()
+	if(!email){
+		showSnackbar({message: 'Please enter the email'})
+		return;
+	}
+
+	sendPasswordResetEmail(auth, email)
+	.then(() => {
+		showSnackbar({message: 'Password reset link sent. Please check you email!'})
+		toggleModal('modal-reset')
+	})
+	.catch((err) => {
+		console.log(err.code)
+		let errorMessage;
+		switch(err.code){
+			case 'auth/user-not-found':
+				errorMessage = "There is no account associated with this email!"
+				break;
+			default:
+				errorMessage = 'Something went wrong. Please try again later!'
+		}
+		
+		showSnackbar({ message: errorMessage })
+	})
+}
+
+onAuthStateChanged(auth, user => {
+	const login = document.querySelector('#nav-login')
+	const signup = document.querySelector('#nav-signup')
+	const logout = document.querySelector('#nav-logout')
+	const svgNode = logout.querySelector('svg')
+	const imageNode = logout.querySelector('img');
+
+	if(user){
+		// We will enter this block if user is signed in
+		login.classList.add('hidden');
+		signup.classList.add('hidden');
+		logout.classList.remove('hidden');
+
+		if(user.photoURL){
+			logout.classList.add('has-img');
+			svgNode.classList.add('hidden');
+			imageNode.src = user.photoURL;
+			imageNode.classList.remove('hidden');
+		}
+		if(user.displayName){
+			logout.querySelector('.menu-name').innerHTML = user.displayName;
+		}
+		logout.querySelector('.menu-email').innerHTML = user.email;
+	}else{
+		// We will enter this block if user is logged out
+		login.classList.remove('hidden')
+		signup.classList.remove('hidden')
+		logout.classList.add('hidden')
+		logout.classList.remove('has-img')
+		imageNode.classList.add('hidden')
+		svgNode.classList.remove('hidden')
+	}
+})
 
 </script>
 
